--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -1,14 +1,14 @@
 // BY NAME
 // Define all your color values by color names here
-$black: #000
-$white: #fff
+$color-pink: #FF506A
+$color-pinkish-white: #F6e3e5
+$color-white: #ffffff
+$color-black: #262322
+$color-grey: #635962
 
 // BY PURPOSE
 // Re-define colors by purpose here so that site-wide color updates can be done
 // with a small number of changes to the config file.
 // If the color scheme does not call for two areas using the same color to match
 // give them different names so they can be adjusted separately in the future.
-$default-light-background: $white
-$default-dark-background: $black
-$default-light-copy: $white
-$default-dark-copy: $black
+$brand-color: $color-pink
