--- a/global/main.sass
+++ b/global/main.sass
@@ -1,5 +1,9 @@
 // Get to a blank slate.
 @import sass-global-sources/reset
 
+// Config files
+@import ./sass-config/_colors
+@import ./sass-config/_fonts
+
 // Bring in components
 @import ../components/accordion/accordion
