--- a/components/nav/nav.html
+++ b/components/nav/nav.html
@@ -1,3 +1,18 @@
-<nav>
-  <img src="{{ component.logo.url }}" alt="{{ component.logo.alt }}" />
+<nav class="nav">
+  <div class="nav__brand">
+    <img
+      class="nav__logo"
+      src="{{ component.logo.url }}"
+      alt="{{ component.logo.alt }}"
+    />
+  </div>
+  <ul class="nav__content">
+    {% for link in component.links %}
+    <a href="{{ link.url }}" class="nav__link">
+      <li class="nav__item">
+        {{ link.name }}
+      </li>
+    </a>
+    {% endfor %}
+  </ul>
 </nav>
