--- a/global/main.sass
+++ b/global/main.sass
@@ -8,3 +8,4 @@
 // Bring in components
 @import ../components/accordion/accordion
 @import ../components/nav/nav
+@import ../components/footer/footer
