Setup starter hero

--- a/global/main.sass
+++ b/global/main.sass
@@ -8,4 +8,5 @@
 // Bring in components
 @import ../components/accordion/accordion
 @import ../components/nav/nav
+@import ../components/hero/hero
 @import ../components/footer/footer
