--- a/components/hero/hero.html
+++ b/components/hero/hero.html
@@ -1,1 +1,3 @@
-<section class="hero">Hero here!</section>
+<section class="hero">
+  <h1 class="hero__header">{{ component.header }}</h1>
+</section>
