--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -12,3 +12,14 @@ $color-grey: #635962
 // If the color scheme does not call for two areas using the same color to match
 // give them different names so they can be adjusted separately in the future.
 $brand-color: $color-pink
+// Nav colors
+$nav-background-color: $color-pinkish-white
+$nav-font-color: $color-grey
+$nav-font-hover-color: $color-black
+// Hero colors
+$hero-background-color: $color-white
+$hero-font-color: $color-black
+// Footer colors
+$footer-background-color: $color-pinkish-white
+$footer-font-color: $color-grey
+$footer-font-hover-color: $color-black
