--- a/components/hero/hero.sass
+++ b/components/hero/hero.sass
@@ -4,6 +4,8 @@
   display: flex
   align-items: center
   justify-content: center
+  background: $hero-background-color
 
 .hero__header
   font-size: 5rem
+  color: $hero-font-color
