Add font-weight mixins

--- a/components/hero/hero.sass
+++ b/components/hero/hero.sass
@@ -5,6 +5,7 @@
   align-items: center
   justify-content: center
   background: $hero-background-color
+  +font-weight-bold
 
 .hero__header
   font-size: 5rem
