--- a/global/main.sass
+++ b/global/main.sass
@@ -3,7 +3,7 @@
 
 // Config files
 @import ./sass-config/_colors
-@import ./sass-config/_fonts
+@import ./sass-config/_mixins
 
 // Bring in components
 @import ../components/accordion/accordion
