Add font-size variables

--- a/components/footer/footer.sass
+++ b/components/footer/footer.sass
@@ -27,6 +27,7 @@
   color: $footer-font-color
   text-decoration: none
   transition: color 0.3s
+  font-size: $footer-link-font-size
 
 .footer__link:hover
   color: $footer-font-hover-color
