--- a/components/hero/hero.sass
+++ b/components/hero/hero.sass
@@ -8,6 +8,6 @@
   +font-weight-bold
 
 .hero__header
-  font-size: 5rem
+  font-size: $hero-header-font-size
   color: $hero-font-color
   +font-secondary
