--- a/components/nav/nav.sass
+++ b/components/nav/nav.sass
@@ -24,6 +24,7 @@
 .nav__link
   text-decoration: none
   color: $nav-font-color
+  font-size: $nav-link-font-size
   transition: color 0.3s
 
 .nav__link:hover
