--- a/global/main.sass
+++ b/global/main.sass
@@ -4,6 +4,7 @@
 // Config files
 @import ./sass-config/_colors
 @import ./sass-config/_mixins
+@import ./sass-config/_font-sizes
 
 // Bring in components
 @import ../components/accordion/accordion
