--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -2,8 +2,9 @@
   <div class="footer__brand">
     <img
       class="footer__logo"
-      src="{{ component.logo.url }}"
-      alt="{{ component.logo.alt }}"
+      {# Disabled below because it is broken #}
+      {# src="{{ component.logo.url }}" #}
+      {# alt="{{ component.logo.alt }}" #}
     />
   </div>
   <ul class="footer__content">
