--- a/global/main.sass
+++ b/global/main.sass
@@ -5,6 +5,7 @@
 @import ./sass-config/_colors
 @import ./sass-config/_mixins
 @import ./sass-config/_font-sizes
+@import ./sass-config/_base
 
 // Bring in components
 @import ../components/accordion/accordion
