--- a/components/hero/hero.html
+++ b/components/hero/hero.html
@@ -1,3 +1,11 @@
 <section class="hero">
-  <h1 class="hero__header">{{ component.header }}</h1>
+  <div class="hero__video-wrap">
+    <video
+      src="/static/images/hero-video.mp4"
+      autoplay="true"
+      loop="true"
+      class="hero__video"
+    ></video>
+  </div>
+  <div class="hero__overlay"></div>
 </section>
