--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -17,8 +17,8 @@ $nav-background-color: $color-pinkish-white
 $nav-font-color: $color-grey
 $nav-font-hover-color: $color-black
 // Hero colors
-$hero-background-color: $color-white
-$hero-font-color: $color-black
+$hero-overlay-color: $color-grey
+$hero-font-color: $color-white
 // Footer colors
 $footer-background-color: $color-pinkish-white
 $footer-font-color: $color-grey
