--- a/components/hero/hero.sass
+++ b/components/hero/hero.sass
@@ -1,15 +1,32 @@
 @import ../global/sass-config/_mixins
   
 .hero 
-  height: 80vh
+  height: 90vh
   max-width: 100vw
   display: flex
   align-items: center
   justify-content: center
-  background: $hero-background-color
   +font-weight-bold
+  overflow-x: hidden
 
-.hero__header
-  font-size: $hero-header-font-size
-  color: $hero-font-color
-  +font-secondary
+.hero__video-wrap
+  position: absolute
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+  overflow: hidden
+  z-index: -2
+
+.hero__video
+  min-width: 100%
+  min-height: 100%
+
+.hero__overlay
+  height: 100%
+  width: 100%
+  position: absolute
+  top: 0
+  left: 0
+  background: linear-gradient(to bottom, rgba($hero-overlay-color, 0.8), rgba($hero-overlay-color, 0.6), rgba($hero-overlay-color, 0.8))
+  z-index: -1
