Mute video for autoplay

--- a/components/hero/hero.html
+++ b/components/hero/hero.html
@@ -5,6 +5,7 @@
       autoplay="true"
       loop="true"
       class="hero__video"
+      muted="true"
     ></video>
   </div>
   <div class="hero__overlay"></div>
