--- a/components/footer/footer.sass
+++ b/components/footer/footer.sass
@@ -10,7 +10,7 @@
   align-items: center
   justify-content: space-between
   +font-primary
-  +font-weight-light
+  +font-weight-regular
 
 .footer__brand
   height: 50%
