--- a/components/nav/nav.sass
+++ b/components/nav/nav.sass
@@ -9,7 +9,7 @@
   align-items: center
   justify-content: space-between
   +font-primary
-  +font-weight-light
+  +font-weight-regular
 
 .nav__brand
   height: 100%
