--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -1,25 +1,64 @@
 // BY NAME
 // Define all your color values by color names here
-$color-pink: #FF506A
-$color-pinkish-white: #F6e3e5
-$color-white: #ffffff
-$color-black: #262322
-$color-grey: #635962
+
+// Neutral
+$color-neutral-100: #151515
+$color-neutral-80: #4A4A4A
+$color-neutral-60: #808080
+$color-neutral-40: #B5B5B5
+$color-neutral-20: #EBEBEB
+
+// Primary
+$color-primary-100: #FF0097
+$color-primary-80: #FF3CB0
+$color-primary-60: #FF73C6
+$color-primary-40: #FFABDD
+$color-primary-20: #FFE4F4
+
+// Accent Blue
+$color-accent-blue-100: #008BFF
+$color-accent-blue-80: #3CA1FF
+$color-accent-blue-60: #72BBFF
+$color-accent-blue-40: #ABD7FF
+$color-accent-blue-20: #E6F3FF
+
+// Accent Yellow
+$color-accent-yellow-100: #FFEB00
+$color-accent-yellow-80: #FFF03A
+$color-accent-yellow-60: #FFF472
+$color-accent-yellow-40: #FFF9AA
+$color-accent-yellow-20: #FFFDE6
+
+// Accent Green
+$color-accent-green-100: #0CFF00
+$color-accent-green-80: #41FF3A
+$color-accent-green-60: #77FF72
+$color-accent-green-40: #AEFFAB
+$color-accent-green-20: #E6FFE5
+
+// Accent Orange
+$color-accent-orange-100: #FF8700
+$color-accent-orange-80: #FFA43B
+$color-accent-orange-60: #FFBE73
+$color-accent-orange-40: #FFD8AC
+$color-accent-orange-20: #FFF3E5
 
 // BY PURPOSE
 // Re-define colors by purpose here so that site-wide color updates can be done
 // with a small number of changes to the config file.
 // If the color scheme does not call for two areas using the same color to match
 // give them different names so they can be adjusted separately in the future.
-$brand-color: $color-pink
+
 // Nav colors
-$nav-background-color: $color-pinkish-white
-$nav-font-color: $color-grey
-$nav-font-hover-color: $color-black
+$nav-background-color: $color-primary-20
+$nav-font-color: $color-neutral-80
+$nav-font-hover-color: $color-neutral-100
+
 // Hero colors
-$hero-overlay-color: $color-grey
-$hero-font-color: $color-white
+$hero-overlay-color: $color-neutral-80
+$hero-font-color: $color-neutral-20
+
 // Footer colors
-$footer-background-color: $color-pinkish-white
-$footer-font-color: $color-grey
-$footer-font-hover-color: $color-black
+$footer-background-color: $color-primary-20
+$footer-font-color: $color-neutral-80
+$footer-font-hover-color: $color-neutral-100
