--- a/global/sass-config/_font-sizes.sass
+++ b/global/sass-config/_font-sizes.sass
@@ -1,11 +1,22 @@
 // Font size variables
 // -------------------
 
+$font-size-10: 0.8rem
+$font-size-20: 1rem
+$font-size-30: 1.2rem
+$font-size-40: 1.5rem
+$font-size-50: 2rem
+$font-size-60: 3rem
+$font-size-70: 4rem
+
+// By Purpose
+// ----------
+
 // Nav
-$nav-link-font-size: 1.2rem
+$nav-link-font-size: $font-size-30
 
 // Hero
-$hero-header-font-size: 5rem
+$hero-header-font-size: $font-size-70
 
 // Footer
-$footer-link-font-size: 1.2rem
+$footer-link-font-size: $font-size-30
