--- a/global/sass-config/_mixins.sass
+++ b/global/sass-config/_mixins.sass
@@ -1,15 +1,24 @@
-// Fonts
+// Font Families
 =font-primary
   font-family: 'Open Sans', Verdana, Geneva, Tahoma
 
 =font-secondary
   font-family: 'Roboto', Arial, Helvetica, sans-serif
 
-=font-weight-light
-  font-weight: 300
-
+// Font Weights
 =font-weight-regular
   font-weight: 400
 
 =font-weight-bold
-  font-weight: 700
+  font-weight: 600
+
+// Box Shadows
+
+=box-shadow-light
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25)
+
+=box-shadow-regular
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25)
+
+=box-shadow-bold
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25)
