Setup color palette page

--- a/global/main.sass
+++ b/global/main.sass
@@ -2,13 +2,16 @@
 @import sass-global-sources/reset
 
 // Config files
-@import ./sass-config/_colors
-@import ./sass-config/_mixins
-@import ./sass-config/_font-sizes
-@import ./sass-config/_base
+@import ./sass-config/colors
+@import ./sass-config/mixins
+@import ./sass-config/font-sizes
+@import ./sass-config/base
+@import ./sass-config/line-height
+@import ./sass-config/spacing
 
 // Bring in components
 @import ../components/accordion/accordion
 @import ../components/nav/nav
 @import ../components/hero/hero
 @import ../components/footer/footer
+@import ../components/colors/colors
