Use spacing system

--- a/components/colors/colors.sass
+++ b/components/colors/colors.sass
@@ -22,7 +22,7 @@
   display: flex
   align-items: center
   justify-content: space-evenly
-  margin-bottom: 1rem
+  margin-bottom: $spacing-30
 
 .colors__box
   width: 5rem
