Modify blue and orange color values

--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -16,11 +16,11 @@ $color-primary-40: #FFABDD
 $color-primary-20: #FFE4F4
 
 // Accent Blue
-$color-accent-blue-100: #008BFF
-$color-accent-blue-80: #3CA1FF
-$color-accent-blue-60: #72BBFF
-$color-accent-blue-40: #ABD7FF
-$color-accent-blue-20: #E6F3FF
+$color-accent-blue-100: #00BAFF
+$color-accent-blue-80: #3AC9FF
+$color-accent-blue-60: #73D9FF
+$color-accent-blue-40: #ADE9FF
+$color-accent-blue-20: #E5F8FF
 
 // Accent Yellow
 $color-accent-yellow-100: #FFEB00
@@ -37,11 +37,11 @@ $color-accent-green-40: #AEFFAB
 $color-accent-green-20: #E6FFE5
 
 // Accent Orange
-$color-accent-orange-100: #FF8700
-$color-accent-orange-80: #FFA43B
-$color-accent-orange-60: #FFBE73
-$color-accent-orange-40: #FFD8AC
-$color-accent-orange-20: #FFF3E5
+$color-accent-orange-100: #FF6720
+$color-accent-orange-80: #FF803F
+$color-accent-orange-60: #FFA272
+$color-accent-orange-40: #FFC8AB
+$color-accent-orange-20: #FFEDE4
 
 // BY PURPOSE
 // Re-define colors by purpose here so that site-wide color updates can be done
