--- a/components/nav/nav.sass
+++ b/components/nav/nav.sass
@@ -3,8 +3,7 @@
 .nav
   height: 10vh
   max-width: 100%
-  background: $nav-background-color
-  padding: 1rem 5rem
+  padding: $spacing-30 $spacing-50
   display: flex
   align-items: center
   justify-content: space-between
