--- a/components/hero/hero.html
+++ b/components/hero/hero.html
@@ -1,12 +1,1 @@
-<section class="hero">
-  <div class="hero__video-wrap">
-    <video
-      src="/static/images/hero-video.mp4"
-      autoplay="true"
-      loop="true"
-      class="hero__video"
-      muted="true"
-    ></video>
-  </div>
-  <div class="hero__overlay"></div>
-</section>
+<section class="hero"></section>
