Setup new hero outline

--- a/components/nav/nav.sass
+++ b/components/nav/nav.sass
@@ -2,16 +2,17 @@
   
 .nav
   height: 10vh
-  max-width: 100%
+  width: 100%
   padding: $spacing-30 $spacing-50
   display: flex
   align-items: center
   justify-content: space-between
   +font-primary
   +font-weight-regular
+  position: fixed
 
 .nav__brand
-  height: 100%
+  height: 75%
 
 .nav__logo
   height: 100%
