--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -1,6 +1,9 @@
 // BY NAME
 // Define all your color values by color names here
 
+$color-white: white
+$color-black: black
+
 // Neutral
 $color-neutral-100: #151515
 $color-neutral-80: #4A4A4A
@@ -49,14 +52,18 @@ $color-accent-orange-20: #FFEDE4
 // If the color scheme does not call for two areas using the same color to match
 // give them different names so they can be adjusted separately in the future.
 
+// Body colors
+$body-background-color: $color-neutral-20
+
 // Nav colors
 $nav-background-color: $color-primary-20
-$nav-font-color: $color-neutral-80
-$nav-font-hover-color: $color-neutral-100
+$nav-font-color: $color-neutral-40
+$nav-font-hover-color: $color-neutral-20
 
 // Hero colors
-$hero-overlay-color: $color-neutral-80
-$hero-font-color: $color-neutral-20
+$hero-background-color: $color-neutral-100
+$hero-gradient-font-start-color: $color-white
+$hero-gradient-font-end-color: $color-primary-20
 
 // Footer colors
 $footer-background-color: $color-primary-20
