--- a/components/hero/hero.sass
+++ b/components/hero/hero.sass
@@ -1,32 +1,30 @@
 @import ../global/sass-config/_mixins
   
 .hero 
-  height: 90vh
+  height: 100vh
   max-width: 100vw
   display: flex
+  flex-direction: column
   align-items: center
   justify-content: center
+  background-color: $hero-background-color
+
+.hero__heading
+  +font-secondary
   +font-weight-bold
-  overflow-x: hidden
+  font-size: $font-size-70
+  color: $color-neutral-20
+  background: -webkit-linear-gradient($hero-gradient-font-start-color, $hero-gradient-font-end-color)
+  -webkit-background-clip: text
+  -webkit-text-fill-color: transparent
+  margin: $spacing-20
 
-.hero__video-wrap
-  position: absolute
-  top: 0
-  left: 0
-  width: 100%
-  height: 100%
-  overflow: hidden
-  z-index: -2
-
-.hero__video
-  min-width: 100%
-  min-height: 100%
-
-.hero__overlay
-  height: 100%
-  width: 100%
-  position: absolute
-  top: 0
-  left: 0
-  background: linear-gradient(to bottom, rgba($hero-overlay-color, 0.8), rgba($hero-overlay-color, 0.6), rgba($hero-overlay-color, 0.8))
-  z-index: -1
+.hero__subheading
+  +font-primary
+  +font-weight-regular
+  font-size: $font-size-50
+  color: $color-neutral-20
+  background: -webkit-linear-gradient($hero-gradient-font-start-color, $hero-gradient-font-end-color)
+  -webkit-background-clip: text
+  -webkit-text-fill-color: transparent
+  padding: $spacing-20
