Setup outline of about page

--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -60,6 +60,12 @@ $nav-background-color: $color-primary-20
 $nav-font-color: $color-neutral-40
 $nav-font-hover-color: $color-neutral-20
 
+// About colors
+$profile-name-font-color: $color-neutral-100
+$profile-about-font-color: $color-neutral-80
+$about-fade-start-color: $color-neutral-20
+$about-fade-end-color: rgba(0, 0, 0, 0);
+
 // Hero colors
 $hero-background-color: $color-neutral-100
 $hero-gradient-font-start-color: $color-white
