--- a/global/sass-config/_font-sizes.sass
+++ b/global/sass-config/_font-sizes.sass
@@ -15,6 +15,10 @@ $font-size-70: 4rem
 // Nav
 $nav-link-font-size: $font-size-30
 
+// About
+$profile-name-font-size: $font-size-40
+$profile-about-font-size: $font-size-20
+
 // Hero
 $hero-header-font-size: $font-size-70
 
