--- a/global/main.sass
+++ b/global/main.sass
@@ -10,6 +10,7 @@
 @import ./sass-config/spacing
 
 // Bring in components
+@import ../components/about/about
 @import ../components/accordion/accordion
 @import ../components/nav/nav
 @import ../components/hero/hero
