Setup block scroll effect

--- a/components/hero/hero.sass
+++ b/components/hero/hero.sass
@@ -28,3 +28,20 @@
   -webkit-background-clip: text
   -webkit-text-fill-color: transparent
   padding: $spacing-20
+
+.block
+  width: 25%
+  height: 100vh
+  background: $hero-block-color
+  position: absolute
+  top: 0
+  +box-shadow-regular
+
+.block--1
+  left: 0
+.block--2
+  left: 25%
+.block--3
+  left: 50%
+.block--4
+  left: 75%
