--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -70,6 +70,7 @@ $about-fade-end-color: rgba(0, 0, 0, 0);
 $hero-background-color: $color-neutral-100
 $hero-gradient-font-start-color: $color-white
 $hero-gradient-font-end-color: $color-primary-20
+$hero-block-color: $color-primary-100
 
 // Footer colors
 $footer-background-color: $color-primary-20
