Adjust block styling

--- a/components/hero/hero.sass
+++ b/components/hero/hero.sass
@@ -32,7 +32,7 @@
 .block
   width: 25%
   height: 100vh
-  background: $hero-block-color
+  background: linear-gradient(to top, $hero-block-start-color, $hero-block-end-color)
   position: absolute
   top: 0
   +box-shadow-regular
