Update hero.ts for variable number of blocks

--- a/components/hero/hero.html
+++ b/components/hero/hero.html
@@ -2,7 +2,8 @@
   <h1 class="hero__heading">NERDWISE</h1>
   <h4 class="hero__subheading">A cool tagline can go here</h4>
 </section>
-<div class="block block--1"></div>
-<div class="block block--2"></div>
-<div class="block block--3"></div>
-<div class="block block--4"></div>
+<div class="blocks">
+  {% for i in range(16) %}
+    <div class="block"></div>
+  {% endfor %}
+</div>
