Move block transition to reusable component

--- a/global/main.sass
+++ b/global/main.sass
@@ -12,6 +12,7 @@
 // Bring in components
 @import ../components/about/about
 @import ../components/accordion/accordion
+@import ../components/blocks/blocks
 @import ../components/nav/nav
 @import ../components/hero/hero
 @import ../components/footer/footer
