--- a/components/nav/nav.sass
+++ b/components/nav/nav.sass
@@ -27,10 +27,27 @@
   width: 50%
 
 .nav__link
+  position: relative
   text-decoration: none
   color: $nav-font-color
   font-size: $nav-link-font-size
-  transition: color 0.3s
+  transition: color 0.2s
 
 .nav__link:hover
   color: $nav-font-hover-color
+
+.nav__link:before
+  content: ""
+  position: absolute
+  width: 100%
+  height: 2px
+  top: 50%
+  left: 0
+  background-color: $nav-font-hover-color
+  visibility: hidden
+  transform: scaleX(0)
+  transition: visibility 0.2s ease-in-out, transform 0.2s ease-in-out
+
+.nav__link:hover:before
+  visibility: visible
+  transform: scaleX(1)
