Change nav font color after hero section

--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -59,6 +59,8 @@ $body-background-color: $color-neutral-20
 $nav-background-color: $color-primary-20
 $nav-font-color: $color-neutral-40
 $nav-font-hover-color: $color-neutral-20
+$nav-font-color--dark: $color-neutral-80
+$nav-font-hover-color--dark: $color-neutral-100
 
 // About colors
 $profile-name-font-color: $color-neutral-100
