--- a/components/nav/nav.sass
+++ b/components/nav/nav.sass
@@ -51,3 +51,11 @@
 .nav__link:hover:before
   visibility: visible
   transform: scaleX(1)
+
+.nav--dark
+  .nav__link
+    color: $nav-font-color--dark
+  .nav__link:hover
+    color: $nav-font-hover-color--dark
+  .nav__link:before
+    background-color: $nav-font-hover-color--dark
