Enlarge hero header

--- a/components/hero/hero.html
+++ b/components/hero/hero.html
@@ -1,4 +1,4 @@
 <section class="hero">
   <h1 class="hero__heading">NERDWISE</h1>
-  <h4 class="hero__subheading">A cool tagline can go here</h4>
+  <!-- <h4 class="hero__subheading">A cool tagline can go here</h4> -->
 </section>
