--- a/global/sass-config/_font-sizes.sass
+++ b/global/sass-config/_font-sizes.sass
@@ -8,6 +8,10 @@ $font-size-40: 1.5rem
 $font-size-50: 2rem
 $font-size-60: 3rem
 $font-size-70: 4rem
+$font-size-80: 6rem
+$font-size-90: 9rem
+$font-size-100: 14rem
+$font-size-110: 20rem
 
 // By Purpose
 // ----------
