Small change to blocks transition

--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -72,10 +72,12 @@ $about-fade-end-color: rgba(0, 0, 0, 0);
 $hero-background-color: $color-neutral-100
 $hero-gradient-font-start-color: $color-white
 $hero-gradient-font-end-color: $color-primary-40
-$hero-block-start-color: $color-primary-100
-$hero-block-end-color: $color-primary-80
 
 // Footer colors
 $footer-background-color: $color-primary-20
 $footer-font-color: $color-neutral-80
 $footer-font-hover-color: $color-neutral-100
+
+// Block colors
+$block-start-color: $color-primary-100
+$block-end-color: $color-primary-60
