--- a/components/blocks/blocks.sass
+++ b/components/blocks/blocks.sass
@@ -9,4 +9,4 @@
 .block
   width: 100%
   height: 100vh
-  background: linear-gradient(to top, $hero-block-start-color, $hero-block-end-color)
+  background: linear-gradient(to top, $block-start-color, $block-end-color)
