Setup slide in nav

--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -56,7 +56,7 @@ $color-accent-orange-20: #FFEDE4
 $body-background-color: $color-neutral-20
 
 // Nav colors
-$nav-background-color: $color-primary-20
+$nav-background-color: $color-neutral-20
 $nav-font-color: $color-neutral-40
 $nav-font-hover-color: $color-neutral-20
 $nav-font-color--dark: $color-neutral-80
