--- a/components/nav/nav.sass
+++ b/components/nav/nav.sass
@@ -52,6 +52,15 @@
   visibility: visible
   transform: scaleX(1)
 
+.nav__background
+  height: 10vh
+  width: 0
+  position: fixed
+  top: 0
+  right: 0
+  z-index: 2
+  background-color: $nav-background-color
+
 .nav--dark
   .nav__link
     color: $nav-font-color--dark
