--- a/components/about/about.html
+++ b/components/about/about.html
@@ -5,11 +5,13 @@
   </h1>
   {% for person in component.staff %}
   <div class="profile">
-    <img
-      src="{{ person.image.url }}"
-      alt="{{ person.image.alt }}"
-      class="profile__image"
-    />
+    <div class="profile__frame">
+      <img
+        src="{{ person.image.url }}"
+        alt="{{ person.image.alt }}"
+        class="profile__image"
+      />
+    </div>
     <div class="profile__info">
       <h2 class="profile__name">{{ person.name }} - {{ person.position }}</h2>
       <p class="profile__about">
