Reuse nav.currentSection() for each section

--- a/components/nav/nav.sass
+++ b/components/nav/nav.sass
@@ -81,3 +81,39 @@
     background-color: $nav-font-hover-color--dark
     visibility: visible
     transform: scaleX(1)
+.nav__link--projects--active
+  color: $nav-font-hover-color--dark !important
+  &:before
+    content: ""
+    position: absolute
+    width: 100%
+    height: 2px
+    top: 50%
+    left: 0
+    background-color: $nav-font-hover-color--dark
+    visibility: visible
+    transform: scaleX(1)
+.nav__link--workflow--active
+  color: $nav-font-hover-color--dark !important
+  &:before
+    content: ""
+    position: absolute
+    width: 100%
+    height: 2px
+    top: 50%
+    left: 0
+    background-color: $nav-font-hover-color--dark
+    visibility: visible
+    transform: scaleX(1)
+.nav__link--contact--active
+  color: $nav-font-hover-color--dark !important
+  &:before
+    content: ""
+    position: absolute
+    width: 100%
+    height: 2px
+    top: 50%
+    left: 0
+    background-color: $nav-font-hover-color--dark
+    visibility: visible
+    transform: scaleX(1)
