--- a/components/about/about.sass
+++ b/components/about/about.sass
@@ -24,7 +24,13 @@
   visibility: hidden
   transition: transform 0.3s, visibility 0.3s
 
-.profile__frame--reveal
+.profile__frame--1--reveal
+  transform: scaleY(1)
+  visibility: visible
+.profile__frame--2--reveal
+  transform: scaleY(1)
+  visibility: visible
+.profile__frame--3--reveal
   transform: scaleY(1)
   visibility: visible
 
