--- a/components/blocks/blocks.sass
+++ b/components/blocks/blocks.sass
@@ -10,3 +10,4 @@
   width: 100%
   height: 100vh
   background: linear-gradient(to top, $block-start-color, $block-end-color)
+  border-right: 1px solid rgba(0, 0, 0, 0.1)
