Setup outline of projects page

--- a/components/projects/projects.sass
+++ b/components/projects/projects.sass
@@ -1,2 +1,38 @@
 .projects
-  min-height: 80vh
+  margin-top: 12vh
+  display: flex
+  flex-direction: column
+  align-items: center
+  justify-content: flex-start
+
+.projects__header
+  display: none
+
+.project
+  display: flex
+  align-items: flex-start
+  justify-content: space-between
+  margin-bottom: $spacing-60
+  width: 60%
+
+.project:nth-of-type(odd)
+  flex-direction: row-reverse
+
+.project__info
+  display: flex
+  flex-direction: column
+  align-items: flex-start
+  justify-content: flex-start
+
+.project__name
+  margin-bottom: $spacing-50
+  +font-primary
+  +font-weight-bold
+  font-size: $project-name-font-size
+  color: $project-name-font-color
+
+.project__about
+  +font-secondary
+  +font-weight-regular
+  $font-size: $project-about-font-size
+  color: $project-about-font-color
