--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -68,6 +68,10 @@ $profile-about-font-color: $color-neutral-80
 $about-fade-start-color: $color-neutral-20
 $about-fade-end-color: rgba(0, 0, 0, 0);
 
+// Projects colors
+$project-name-font-color: $color-neutral-100
+$project-about-font-color: $color-neutral-80
+
 // Hero colors
 $hero-background-color: $color-neutral-100
 $hero-gradient-font-start-color: $color-white
