--- a/components/projects/projects.html
+++ b/components/projects/projects.html
@@ -1,2 +1,19 @@
 <div id="projects"></div>
-<section class="projects"></section>
+<section class="projects">
+  <h1 class="projects__header">Projects</h1>
+  {% for project in component.projects %}
+  <div class="project">
+    <img
+      src="{{ project.image.url }}"
+      alt="{{ project.image.alt }}"
+      class="project__image"
+    />
+    <div class="project__info">
+      <h2 class="project__name">{{ project.name }}</h2>
+      <p class="project__about">
+        {{ project.about }}
+      </p>
+    </div>
+  </div>
+  {% endfor %}
+</section>
