--- a/global/sass-config/_font-sizes.sass
+++ b/global/sass-config/_font-sizes.sass
@@ -23,6 +23,10 @@ $nav-link-font-size: $font-size-30
 $profile-name-font-size: $font-size-40
 $profile-about-font-size: $font-size-20
 
+// Projects
+$project-name-font-size: $font-size-40
+$project-about-font-size: $font-size-20
+
 // Hero
 $hero-header-font-size: $font-size-70
 
