--- a/components/projects/projects.html
+++ b/components/projects/projects.html
@@ -8,7 +8,7 @@
       alt="{{ project.image.alt }}"
       class="project__image"
     />
-    <div class="project__info">
+    <div class="{{ project.infoClass }}">
       <h2 class="project__name">{{ project.name }}</h2>
       <p class="project__about">
         {{ project.about }}
