--- a/components/projects/projects.sass
+++ b/components/projects/projects.sass
@@ -23,6 +23,13 @@
   flex-direction: column
   align-items: flex-start
   justify-content: flex-start
+  position: sticky
+  top: 12vh
+
+.project__info--1--pause
+  position: fixed
+  top: 12vh
+  left: 20%
 
 .project__name
   margin-bottom: $spacing-50
