Add colors and width to nav link strikethroughs

--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -61,6 +61,10 @@ $nav-font-color: $color-neutral-40
 $nav-font-hover-color: $color-neutral-20
 $nav-font-color--dark: $color-neutral-80
 $nav-font-hover-color--dark: $color-neutral-100
+$nav-strikethrough-color--about: $color-primary-100
+$nav-strikethrough-color--projects: $color-accent-orange-100
+$nav-strikethrough-color--workflow: $color-accent-yellow-100
+$nav-strikethrough-color--contact: $color-accent-blue-100
 
 // About colors
 $profile-name-font-color: $color-neutral-100
