--- a/components/nav/nav.sass
+++ b/components/nav/nav.sass
@@ -43,14 +43,22 @@
   height: 2px
   top: 50%
   left: 0
-  background-color: $nav-font-hover-color
   visibility: hidden
   transform: scaleX(0)
   transition: visibility 0.2s ease-in-out, transform 0.2s ease-in-out
 
+.nav__link--about:before
+  background-color: $nav-strikethrough-color--about
+.nav__link--projects:before
+  background-color: $nav-strikethrough-color--projects
+.nav__link--workflow:before
+  background-color: $nav-strikethrough-color--workflow
+.nav__link--contact:before
+  background-color: $nav-strikethrough-color--contact
+
 .nav__link:hover:before,
   visibility: visible
-  transform: scaleX(1)
+  transform: scaleX(1.3)
 
 .nav__background
   height: 10vh
@@ -67,8 +75,6 @@
     color: $nav-font-color--dark
   .nav__link:hover
     color: $nav-font-hover-color--dark
-  .nav__link:before
-    background-color: $nav-font-hover-color--dark
   .nav__background
     width: 100vw
 
@@ -81,9 +87,9 @@
     height: 2px
     top: 50%
     left: 0
-    background-color: $nav-font-hover-color--dark
+    background-color: $nav-strikethrough-color--about
     visibility: visible
-    transform: scaleX(1)
+    transform: scaleX(1.3)
 .nav__link--projects--active
   color: $nav-font-hover-color--dark !important
   &:before
@@ -93,9 +99,9 @@
     height: 2px
     top: 50%
     left: 0
-    background-color: $nav-font-hover-color--dark
+    background-color: $nav-strikethrough-color--projects
     visibility: visible
-    transform: scaleX(1)
+    transform: scaleX(1.3)
 .nav__link--workflow--active
   color: $nav-font-hover-color--dark !important
   &:before
@@ -105,9 +111,9 @@
     height: 2px
     top: 50%
     left: 0
-    background-color: $nav-font-hover-color--dark
+    background-color: $nav-strikethrough-color--workflow
     visibility: visible
-    transform: scaleX(1)
+    transform: scaleX(1.3)
 .nav__link--contact--active
   color: $nav-font-hover-color--dark !important
   &:before
@@ -117,6 +123,6 @@
     height: 2px
     top: 50%
     left: 0
-    background-color: $nav-font-hover-color--dark
+    background-color: $nav-strikethrough-color--contact
     visibility: visible
-    transform: scaleX(1)
+    transform: scaleX(1.3)
