Use padding instead of margin on sections for scroll anchors

--- a/components/about/about.html
+++ b/components/about/about.html
@@ -1,5 +1,4 @@
-<div id="about"></div>
-<section class="about">
+<section class="about" id="about">
   <h1 class="about__header">
     {{ component.title }}
   </h1>
