--- a/components/projects/projects.html
+++ b/components/projects/projects.html
@@ -1,5 +1,4 @@
-<div id="projects"></div>
-<section class="projects">
+<section class="projects" id="projects">
   <h1 class="projects__header">Projects</h1>
   {% for project in component.projects %}
   <div class="project">
