Dark-theme everything

--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -53,7 +53,7 @@ $color-accent-orange-20: #FFEDE4
 // give them different names so they can be adjusted separately in the future.
 
 // Body colors
-$body-background-color: $color-neutral-20
+$body-background-color: $color-neutral-100
 
 // Nav colors
 $nav-background-color: $color-neutral-20
@@ -67,24 +67,24 @@ $nav-strikethrough-color--workflow: $color-accent-yellow-100
 $nav-strikethrough-color--contact: $color-accent-blue-100
 
 // About colors
-$profile-name-font-color: $color-neutral-100
-$profile-about-font-color: $color-neutral-80
+$profile-name-font-color: $color-neutral-20
+$profile-about-font-color: $color-neutral-40
 $about-fade-start-color: $color-neutral-20
 $about-fade-end-color: rgba(0, 0, 0, 0);
 
 // Projects colors
-$project-name-font-color: $color-neutral-100
-$project-about-font-color: $color-neutral-80
+$project-name-font-color: $color-neutral-20
+$project-about-font-color: $color-neutral-40
 
 // Hero colors
 $hero-background-color: $color-neutral-100
-$hero-gradient-font-start-color: $color-white
-$hero-gradient-font-end-color: $color-primary-40
+$hero-gradient-font-start-color: $color-accent-orange-100
+$hero-gradient-font-end-color: $color-primary-100
 
 // Footer colors
-$footer-background-color: $color-primary-20
-$footer-font-color: $color-neutral-80
-$footer-font-hover-color: $color-neutral-100
+$footer-background-color: $color-neutral-100
+$footer-font-color: $color-neutral-40
+$footer-font-hover-color: $color-neutral-20
 
 // Block colors
 $block-start-color: $color-primary-100
