--- a/components/nav/nav.sass
+++ b/components/nav/nav.sass
@@ -21,6 +21,7 @@
   height: 100%
 
 .nav__content
+  position: relative
   display: flex
   align-items: center
   justify-content: space-between
@@ -61,11 +62,11 @@
   transform: scaleX(1.3)
 
 .nav__background
-  height: 10vh
+  height: calc(100% + 4rem)
   width: 0
-  position: fixed
-  top: 0
-  right: 0
+  position: absolute
+  top: -2rem
+  right: -3rem
   z-index: -1
   background-color: $nav-background-color
   transition: width 0.3s
@@ -76,7 +77,7 @@
   .nav__link:hover
     color: $nav-font-hover-color--dark
   .nav__background
-    width: 100vw
+    width: calc(100% + 6rem)
 
 .nav__link--about--active
   color: $nav-font-hover-color--dark !important
