--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -71,6 +71,7 @@ $profile-name-font-color: $color-neutral-20
 $profile-about-font-color: $color-neutral-40
 $about-fade-start-color: $color-neutral-20
 $about-fade-end-color: rgba(0, 0, 0, 0);
+$profile-block-color: $color-neutral-20
 
 // Projects colors
 $project-name-font-color: $color-neutral-20
