Add depth to block transition

--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -12,6 +12,7 @@ $color-neutral-40: #B5B5B5
 $color-neutral-20: #EBEBEB
 
 // Primary
+$color-primary-120: #a30060
 $color-primary-100: #FF0097
 $color-primary-80: #FF3CB0
 $color-primary-60: #FF73C6
@@ -90,3 +91,5 @@ $footer-font-hover-color: $color-neutral-20
 // Block colors
 $block-start-color: $color-primary-100
 $block-end-color: $color-primary-60
+$block-right-color: $color-primary-100
+$block-bottom-color: $color-primary-120
