--- a/components/blocks/blocks.sass
+++ b/components/blocks/blocks.sass
@@ -10,4 +10,23 @@
   width: 100%
   height: 100vh
   background: linear-gradient(to top, $block-start-color, $block-end-color)
-  margin: 0 $spacing-20
+  margin-right: $spacing-30
+
+.block:before,
+.block:after
+  content: ''
+  position: absolute
+  bottom: -0.5rem
+  right: -0.5rem
+
+.block:before
+  bottom: -0.5rem
+  width: 0.5rem
+  height: calc(100% + 2px)
+  background-image: -webkit-gradient(linear, 0 100%, 0 0, from($block-bottom-color), to($block-right-color))
+
+.block:after
+  right: -0.5rem
+  height: 0.5rem
+  width: calc(100% + 2px)
+  background-image: -webkit-gradient(linear, 0 0, 100% 0, from($block-bottom-color), to($block-bottom-color))
