--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -6,7 +6,7 @@ $color-black: black
 
 // Neutral
 $color-neutral-100: #151515
-$color-neutral-80: #4A4A4A
+$color-neutral-80: #333333
 $color-neutral-60: #808080
 $color-neutral-40: #B5B5B5
 $color-neutral-20: #EBEBEB
