Make changes to nav

--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -57,11 +57,12 @@ $color-accent-orange-20: #FFEDE4
 $body-background-color: $color-neutral-100
 
 // Nav colors
+$nav-logo-background-color: $color-neutral-100
 $nav-background-color: $color-neutral-20
 $nav-font-color: $color-neutral-40
 $nav-font-hover-color: $color-neutral-20
 $nav-font-color--dark: $color-neutral-80
-$nav-font-hover-color--dark: $color-neutral-100
+$nav-font-hover-color--dark: $color-black
 $nav-strikethrough-color--about: $color-primary-100
 $nav-strikethrough-color--projects: $color-accent-orange-100
 $nav-strikethrough-color--workflow: $color-accent-yellow-100
