--- a/components/nav/nav.sass
+++ b/components/nav/nav.sass
@@ -3,7 +3,7 @@
 .nav
   height: 10vh
   width: 100%
-  padding: $spacing-30 $spacing-50
+  padding: $spacing-30 $spacing-20
   display: flex
   align-items: center
   justify-content: space-between
@@ -15,7 +15,10 @@
   z-index: 3
 
 .nav__brand
-  height: 75%
+  height: calc(100% + 1rem)
+  background-color: $nav-logo-background-color
+  padding: 1rem
+  box-shadow: 2px 2px 4px rgba($nav-logo-background-color, 0.25)
 
 .nav__logo
   height: 100%
@@ -26,6 +29,7 @@
   align-items: center
   justify-content: space-between
   width: 50%
+  padding: 0 3rem
 
 .nav__link
   position: relative
@@ -41,11 +45,12 @@
   content: ""
   position: absolute
   width: 100%
-  height: 2px
+  height: 4px
   top: 50%
   left: 0
   visibility: hidden
   transform: scaleX(0)
+  z-index: -1
   transition: visibility 0.2s ease-in-out, transform 0.2s ease-in-out
 
 .nav__link--about:before
@@ -69,6 +74,7 @@
   right: -3rem
   z-index: -1
   background-color: $nav-background-color
+  box-shadow: 2px 2px 4px rgba(0,0,0,.25)
   transition: width 0.3s
 
 .nav--light
@@ -85,7 +91,7 @@
     content: ""
     position: absolute
     width: 100%
-    height: 2px
+    height: 4px
     top: 50%
     left: 0
     background-color: $nav-strikethrough-color--about
@@ -97,7 +103,7 @@
     content: ""
     position: absolute
     width: 100%
-    height: 2px
+    height: 4px
     top: 50%
     left: 0
     background-color: $nav-strikethrough-color--projects
@@ -109,7 +115,7 @@
     content: ""
     position: absolute
     width: 100%
-    height: 2px
+    height: 4px
     top: 50%
     left: 0
     background-color: $nav-strikethrough-color--workflow
@@ -121,7 +127,7 @@
     content: ""
     position: absolute
     width: 100%
-    height: 2px
+    height: 4px
     top: 50%
     left: 0
     background-color: $nav-strikethrough-color--contact
