Make changes to color of header and blocks

--- a/components/blocks/blocks.sass
+++ b/components/blocks/blocks.sass
@@ -9,7 +9,7 @@
 .block
   width: 100%
   height: 100vh
-  background: linear-gradient(to top, $block-start-color, $block-end-color)
+  background: linear-gradient(to bottom, $block-start-color, $block-middle-color 33%, $block-end-color)
   margin-right: $spacing-30
 
 .block:before,
