--- a/components/hero/hero.sass
+++ b/components/hero/hero.sass
@@ -14,7 +14,7 @@
   +font-weight-bold
   font-size: $font-size-110
   color: $color-neutral-20
-  background: -webkit-linear-gradient($hero-gradient-font-start-color, $hero-gradient-font-end-color)
+  background: -webkit-linear-gradient($hero-gradient-font-start-color, $hero-gradient-font-start-color 67%, $hero-gradient-font-end-color)
   -webkit-background-clip: text
   -webkit-text-fill-color: transparent
   margin: $spacing-20
