--- a/global/sass-config/_colors.sass
+++ b/global/sass-config/_colors.sass
@@ -81,8 +81,8 @@ $project-about-font-color: $color-neutral-40
 
 // Hero colors
 $hero-background-color: $color-neutral-100
-$hero-gradient-font-start-color: $color-accent-orange-100
-$hero-gradient-font-end-color: $color-primary-100
+$hero-gradient-font-start-color: $color-primary-100
+$hero-gradient-font-end-color: $color-neutral-100
 
 // Footer colors
 $footer-background-color: $color-neutral-100
@@ -90,7 +90,8 @@ $footer-font-color: $color-neutral-40
 $footer-font-hover-color: $color-neutral-20
 
 // Block colors
-$block-start-color: $color-primary-100
-$block-end-color: $color-primary-60
+$block-start-color: $color-primary-60
+$block-middle-color: $color-primary-100
+$block-end-color: $color-neutral-100
 $block-right-color: $color-primary-100
-$block-bottom-color: $color-primary-120
+$block-bottom-color: $color-neutral-100
