Add link to nav logo

--- a/components/nav/nav.html
+++ b/components/nav/nav.html
@@ -1,10 +1,12 @@
 <nav class="nav">
   <div class="nav__brand">
-    <img
-      class="nav__logo"
-      src="{{ component.logo.url }}"
-      alt="{{ component.logo.alt }}"
-    />
+    <a href="#">
+      <img
+        class="nav__logo"
+        src="{{ component.logo.url }}"
+        alt="{{ component.logo.alt }}"
+      />
+    </a>
   </div>
   <ul class="nav__content">
     <div class="nav__background"></div>
